week1/menu.css
:root{
  --bg:#ffffff;
  --banner:#dcebf6;
  --promo:#c8dde6;
  --text:#000001;
  --gap:20px;
  --max:1200px;
  --height:50px;
  --fontfamily: 'Times New Roman', serif; 
}

*{box-sizing:border-box}

html,body {
    margin:0;
    background:var(--bg);
    color:var(--text);
    font:20px/1.7 var(--fontfamily)
}

.topbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 50px;
}

.navTitle{
    padding-inline: 10px;
    font-weight: 600;
}

.links a {
    padding-inline: 10px;
}

.Banner {
    height: 250px;
    width: 100%;
    background: var(--banner);
    display: flex;
}

.welcome {
    font-size: 40px;font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-inline: auto;
}

.wrap {
    max-width:var(--max);
    margin: 46px auto
}

.layout {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: var(--gap);
}

.topsec {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / -1;
    grid-auto-rows: 50px;
    gap: inherit;
}

.promoFram {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    background: var(--promo);
}

.promo--1{grid-column: 1 / -1;grid-row: 1;}
.promo--2{grid-column: 1 / 9;grid-row: 2;}
.promo--3{grid-column: 9 / -1;grid-row: 2;}

img {
    max-width: 100%;
    display: block;
}

.promo {
    padding-inline: 10px;
}



.botsec {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / -1;
    gap: inherit;
}

.card--1 { grid-area: 1 / 1 / 2 / 5 }
.card--2 { grid-area: 1 / 5 / 2 / 7 }
.card--3 { grid-area: 1 / 7 / 2 / 9 }
.card--4 { grid-area: 1 / 9 / 2 / 11 }
.card--5 { grid-area: 1 / 11 / 2 / -1 }
.card--6 { grid-area: 2 / 1 / 3 / 5 }
.card--7 { grid-area: 2 / 5 / 3 / 7 }
.card--8 { grid-area: 2 / 7 / 3 / 9 }
.card--9 { grid-area: 2 / 9 / 3 / 11 }
.card--10 { grid-area: 2 / 11 / 3 / -1}

.card {
    position: relative;
    height: 200px;
}

.title {
    position: absolute; bottom: 0;left: 0; right: 0;
    background:rgba(153, 195, 127, 0.7);
    text-align: center;
}

.card .cover {
    width:100%; 
    height:100%; 
    object-fit:cover
}

.star{
    position: absolute; top: 10px;right: 10px;
    opacity: 0.5;
    z-index: 7;
}

.menuIcon, #button{
    display: none;
}

.closeButton {
    position: absolute; top: 10px;right: 15px;
}

.menu {
    display: none;
    border-left: 2px solid #777777;
    box-shadow: 0 0 10px;
    position: fixed;
    inset: 0 0 0 auto;
    height: 100%;
    background: var(--bg);
    z-index: 10000;
    width: 180px;
    padding-top: 10px;
}

@media (max-width:1200px){
    .wrap {
        width: 90%;
    }

    .promo--1{grid-column: 1 / 7;grid-row: 1;}
    .promo--2{grid-column: 7 / -1;grid-row: 1;}
    .promo--3{grid-column: 1 / -1;grid-row: 2;}

    .card--1 { grid-area: 1 / 1 / 2 / 4 }
    .card--2 { grid-area: 1 / 4 / 2 / 7 }
    .card--3 { grid-area: 1 / 7 / 2 / 10 }
    .card--4 { grid-area: 1 / 10 / 2 / -1 }

    .card--5 { grid-area: 2 / 1 / 3 / 4 }
    .card--6 { grid-area: 2 / 4 / 3 / 7 }
    .card--7 { grid-area: 2 / 7 / 3 / 10 }
    .card--8 { grid-area: 2 / 10 / 3 / -1 }

    .card--9 { grid-area: 3 / 1 / 4 / 7 }
    .card--10 { grid-area: 3 / 7 / 4 / -1}
}

@media (max-width:600px){
    .promo--1{grid-column: 1 / -1;grid-row: 1;}
    .promo--2{grid-column: 1 / -1;grid-row: 2;}
    .promo--3{grid-column: 1 / -1;grid-row: 3;}
    
    .card--1 { grid-area: 1 / 1 / 2 / -1 }
    .card--2 { grid-area: 2 / 1 / 3 / -1 }
    .card--3 { grid-area: 3 / 1 / 4 / -1 }
    .card--4 { grid-area: 4 / 1 / 5 / -1 }
    .card--5 { grid-area: 5 / 1 / 6 / -1 }
    .card--6 { grid-area: 6 / 1 / 7 / -1 }
    .card--7 { grid-area: 7 / 1 / 8 / -1 }
    .card--8 { grid-area: 8 / 1 / 9 / -1 }
    .card--9 { grid-area: 9 / 1 / 10 / -1 }
    .card--10 { grid-area: 10 / 1 / 11 / -1}

    .links {
        display: none;
    }

    #button {
        display: block;
        margin-inline: 8px;
    }
    

    .menuItem{
        text-align: center;
        padding: 10px 0;
    }

    .menu.active {
        display: block;
    }
}

